--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.yarolegovich:sliding-root-nav:1.1.1'
+    implementation 'joda-time:joda-time:2.9.4'
 
 }
